          issues when serving a range. Clarified the non support of 
          multiple ranges and cases where the content-range cannot be 
          properly deduced. Reported by Diego Ballve.
        - The Maven POM for the JAX-RS extension was referencing the
          JAX-RS 1.0 snapshot version instead of the final 1.0 version.
          Reported by Hendy Irawan
    - Misc
        - Fully moved org.restlet.gwt.internal content into 
          org.restlet.gwt.engine package.

- 1.1.1 (2008-10-31)
    - Bugs fixed
        - Fixed regression with applications deployed in Servlet 
          container hosted on Windows (Path "\WEB-INF\restlet.xml" 
          does not start with a "/" character). Reported by Brian 
          E. Williams.

- 1.1.0 (2008-10-28)
    - Important change
        - The servlet extension now tries to instantiate the single 
          application with the empty constructor first, then the one 
          with the parameter of type Context. The aim is to encourage 
          most people to use the empty constructor as it is the 
          recommended way since release 1.1M5. The other constructor 
          is still working but logs once a warning message.
    - Bugs fixed
        - Updated the type of the digest value from String to array of 
          bytes. Reported and contributed by Kevin Conaway.
        - Fixed potential NPE in NIO caused by ByteUtils. Reported by
          Bruce Lee.
        - Added missing CGLib imports in Spring library manifest. 
          Reported by Adam Harris.
        - Added missing parsing of the "published" tag in Atom feeds.
        - XPath expression evaluation could swallow some exceptions
          in XmlRepresentation subclasses. Reported by Richard 
          Hoberman.
        - Fixed potential NPE with Digest authentication when the 
          client's identifier is not known.
        - Fixed potential thread safety issues with client connectors.
          Reported by Tim Peierls.